--- a/style/sass.css
+++ b/style/sass.css
@@ -70,14 +70,14 @@ body::-webkit-scrollbar-thumb {
 /* ################# CURSOR ############## */
 .grow,
 .grow-small {
-  transform: scale(10);
-  background: #fff;
+  transform: scale(5);
+  background: #ffffff;
   mix-blend-mode: difference;
   border: none;
 }
 
 .grow-small {
-  transform: scale(2.5);
+  transform: scale(2);
   border: none;
 }
 
@@ -89,7 +89,6 @@ body::-webkit-scrollbar-thumb {
   margin-top: -42px;
   border-radius: 50%;
   border: 0.5px solid rgba(119, 119, 119, 0.459);
-  filter: invert(0.5);
   transition: transform 0.1s ease;
   transform-origin: center center;
   pointer-events: none;
@@ -3841,10 +3840,11 @@ body {
   /* 15.05px */
 }
 .body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover {
-  border-bottom: 1px solid #000000;
+  border-bottom: 2px solid #000000;
+  cursor: url("../assets/img/ir.svg") 20 20, auto;
 }
 .body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover h4 {
-  color: #252525;
+  color: #000000;
   font-weight: 900;
 }
 .body__index main .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover .subtitulo_experiencia {
@@ -4272,7 +4272,7 @@ body {
 }
 .body__index main .capa_contenedora .cont_horizontal_ocho {
   display: flex;
-  width: 200vw;
+  width: 500vw;
 }
 .body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_uno {
   overflow: hidden;
@@ -4314,7 +4314,97 @@ body {
 .body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos {
   width: 100vw;
   height: 100vh;
-  background: #FFF503;
+  background: #fcfcfc;
+  padding: 2em 5em 5em 5em;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .titulo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .titulo h3 {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 115.5%;
+  text-transform: capitalize;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .titulo p {
+  display: flex;
+  width: 138px;
+  height: 104px;
+  padding: 0px 21px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 115.5%;
+  text-transform: capitalize;
+  border-radius: 89px;
+  background: #F9F9F9;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos {
+  display: flex;
+  flex-direction: column;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos {
+  display: flex;
+  padding: 1em 0px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-bottom: 1px solid #818181;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .titulo {
+  width: 40vw;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .titulo h4 {
+  color: #000;
+  font-family: Sora;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  text-transform: uppercase;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .titulo:hover {
+  cursor: url("../assets/img/ir.svg") 20 20, auto;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .subtitulo {
+  display: flex;
+  flex-direction: column;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .subtitulo .titulo_subtitulo {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  text-transform: capitalize;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos .subtitulo img {
+  width: 5vw;
+  height: 2vw;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos p {
+  color: #000;
+  font-family: MargoBeuys;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 107.5%;
+  align-items: end;
+}
+.body__index main .capa_contenedora .cont_horizontal_ocho .cont_horizontal_dos .cont_lista_horizontal_dos .cont_item_horizontal_dos:hover {
+  border-bottom: 2px solid #000000;
+  cursor: url("../assets/img/ir.svg") 20 20, auto;
 }
 
 @keyframes scrollabajo {
