--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -91,14 +91,14 @@ body::-webkit-scrollbar-thumb {
 /* ################# CURSOR ############## */
 .grow,
 .grow-small {
-    transform: scale(10);
-    background: #fff;
+    transform: scale(5);
+    background: #ffffff;
     mix-blend-mode: difference;
     border: none;
 }
 
 .grow-small {
-    transform: scale(2.5);
+    transform: scale(2);
     border: none;
 }
 
@@ -110,7 +110,6 @@ body::-webkit-scrollbar-thumb {
     margin-top: -42px;
     border-radius: 50%;
     border: 0.5px solid rgba(119, 119, 119, 0.459);
-    filter: invert(0.5);
     transition: transform .10s ease;
     transform-origin: center center;
     pointer-events: none;
