--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,14 +2,13 @@
     font-family: "MargoBeuys";
     src: url(../assets/font/MargoBeuys.otf);
 }
+
 @font-face {
     font-family: "sora";
     src: url(../assets/font/MargoBeuys.otf);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-
-
 
 $total-lines: 10;
 $left-offset: 0px;
@@ -91,25 +90,25 @@ body::-webkit-scrollbar-thumb {
 /* ################# CURSOR ############## */
 .grow,
 .grow-small {
-    transform: scale(5);
-    background: #ffffff;
-    mix-blend-mode: difference;
-    border: none;
+    transform: scale(2);
+    background: rgba(255, 255, 255, 0.02);
+    backdrop-filter: blur(10px);
+    border: 0.2px solid rgb(203, 206, 10);
 }
 
 .grow-small {
-    transform: scale(2);
-    border: none;
+    transform: scale(1.5);
+    border: 0.2px solid rgb(203, 206, 10);
 }
 
 .cursor {
     position: fixed;
-    width: 80px;
-    height: 80px;
-    margin-left: -42px;
-    margin-top: -42px;
+    width: 70px;
+    height: 70px;
+    margin-left: -37px;
+    margin-top: -37px;
     border-radius: 50%;
-    border: 0.5px solid rgba(119, 119, 119, 0.459);
+    border: 0.1px solid rgba(206, 206, 206, 0.459);
     transition: transform .10s ease;
     transform-origin: center center;
     pointer-events: none;
@@ -559,6 +558,7 @@ p {
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
+
         h2 {
             color: #FFF;
             font-family: Sora;
@@ -567,6 +567,7 @@ p {
             font-weight: 700;
             line-height: 136%;
             text-transform: capitalize;
+
             strong {
                 color: rgb(255, 230, 0);
                 font-family: Sorts Mill Goudy;
@@ -577,9 +578,10 @@ p {
                 text-transform: uppercase;
             }
         }
-        img{
-            Clip-path: inset(50px 50px 50px 50px);
-            width: 800px;
+
+        img {
+            width: 40vw;
+            z-index: 2;
             overflow: hidden;
         }
 
